# Ros2

./: .gitignore  README.md
CHAPT1/: CMakeLists.txt
CHAPT2/chapt2_ws/src/: CMakeLists.txt
CHAPT2/demo_cpp_pkg/: package.xml
CHAPT2/demo_cpp_pkg/src/: cpp_node.cpp
CHAPT3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
CHAPT3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
CHAPT3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
CHAPT3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
CHAPT3/topic_practice_ws/src/status_publisher/: package.xml  setup.cfg  setup.py
CHAPT3/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
CHAPT3/topic_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
CHAPT3/topic_ws/src/demo_cpp_pkg/src/: turtle_circle.cpp  turtle_control.cpp
CHAPT3/topic_ws/src/demo_python_topic/: package.xml  setup.py
CHAPT3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py
CHAPT4/: cmd.md
CHAPT4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
CHAPT4/chapt4_ws/src/chapt4_interfaces/srv/: Patrol.srv
CHAPT4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
CHAPT4/chapt4_ws/src/demo_cpp_service/launch/: action_launch.py  demo_launch.py
CHAPT4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
CHAPT4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
CHAPT4/chapt4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
CHAPT4/chapt4_ws/src/demo_python_service/launch/: demo_launch.py
CHAPT5/: cmd.md
CHAPT5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
CHAPT5/chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
CHAPT5/chapt5_ws/src/demo_python_tf/: package.xml  setup.cfg  setup.py
CHAPT5/chapt5_ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
CHAPT6/: cmd.md
CHAPT6/chapt6_ws/src/fishbot_description/: CMakeLists.txt  package.xml
CHAPT6/chapt6_ws/src/fishbot_description/config/: display_robot_model.rviz
CHAPT6/chapt6_ws/src/fishbot_description/launch/: display_robot_launch.py  gazebo_sim.launch.py
CHAPT6/chapt6_ws/src/fishbot_description/urdf/: first_robot.urdf  first_robot.xacro
CHAPT6/chapt6_ws/src/fishbot_description/urdf/fishbot/: base.urdf.xacro  common_inertial.xacro  fishrot.urdf.xacro
CHAPT6/chapt6_ws/src/fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
CHAPT6/chapt6_ws/src/fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
CHAPT6/chapt6_ws/src/fishbot_description/world/: room_world.world
CHAPT6/chapt6_ws/src/fishbot_description/world/room/: model.sdf
